WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19065
Resources with a space in their URL don't get error/warning bubbles
https://bugs.webkit.org/show_bug.cgi?id=19065
Summary
Resources with a space in their URL don't get error/warning bubbles
Adam Roben (:aroben)
Reported
2008-05-14 17:24:44 PDT
Resources with a space in their URL don't get error/warning bubbles in the Resources panel.
Attachments
patch v1 with ChangeLog
(6.11 KB, patch)
2008-05-14 17:28 PDT
,
Adam Roben (:aroben)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2008-05-14 17:28:49 PDT
Created
attachment 21143
[details]
patch v1 with ChangeLog
mitz
Comment 2
2008-05-14 17:38:28 PDT
Comment on
attachment 21143
[details]
patch v1 with ChangeLog r=me
Adam Roben (:aroben)
Comment 3
2008-05-19 16:53:28 PDT
Committed in
r33586
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug