        Fix Bug 19065: Resources with a space in their URL don't get error/warning bubbles

<https://bugs.webkit.org/show_bug.cgi?id=19065>

        Reviewed by Dan Bernstein.

        Test: manual-tests/inspector/errors-with-space in-url.html

        * manual-tests/inspector/errors-with-space in-url.html: Added.
        * page/Console.cpp:
        (WebCore::Console::error):
        (WebCore::Console::info):
        (WebCore::Console::log):
        (WebCore::Console::warn):
        Pass the raw URL to the Inspector, not the pretty URL, to match the
        URL that was used when initially telling the Inspector about this
        resource. We continue to pass the pretty URL to the ChromeClient for
        backwards compatibility.


git-svn-id: svn://svn.chromium.org/blink/trunk@33586 bbb929c8-8fbe-4397-9dbb-9b2b20218538